# mccpp

./: .gitignore  CMakeLists.txt  CMakeUserPresets.json  LICENSE  README.md  conan_provider.cmake  conandata.yml  conanfile.py  server.toml  vcpkg-configuration.json  vcpkg.json
config/: server.toml
src/: BasicTimer.cpp  BasicTimer.h  BufferCompressor.cpp  BufferCompressor.h  BufferCrypter.cpp  BufferCrypter.h  ByteBuffer.cpp  ByteBuffer.h  ConfigManager.cpp  ConfigManager.h  KnownPack.cpp  KnownPack.h  MinecraftServer.cpp  MinecraftServer.h  RSAKeypair.cpp  RSAKeypair.h  ServerConfig.cpp  ServerConfig.h  SharedConstants.h  VarInt.cpp  VarInt.h  main.cpp
src/nbt/: Concepts.h  JsonToNbtReader.cpp  JsonToNbtReader.h  NBTBuilder.cpp  NBTBuilder.h  NBTParser.cpp  NBTParser.h  NBTReader.cpp  NBTReader.h  NBTTag.cpp  NBTTag.h  NBTTagType.cpp  NBTTagType.h  NBTWriter.cpp  NBTWriter.h  TagCompoundBuilder.cpp  TagCompoundBuilder.h  TagListBuilder.cpp  TagListBuilder.h
src/nbt/tag/: NamedTag.h  Tag.cpp  Tag.h  TagByte.cpp  TagByte.h  TagByteArray.cpp  TagByteArray.h  TagCompound.cpp  TagCompound.h  TagDouble.cpp  TagDouble.h  TagEnd.cpp  TagEnd.h  TagFloat.cpp  TagFloat.h  TagInt.cpp  TagInt.h  TagIntArray.cpp  TagIntArray.h  TagList.cpp  TagList.h  TagLong.cpp  TagLong.h  TagLongArray.cpp  TagLongArray.h  TagShort.cpp  TagShort.h  TagString.cpp  TagString.h  TagType.cpp  TagType.h
src/nbt/util/: Concepts.h
src/net/: ByteBuffer.cpp  ByteBuffer.h  Connection.cpp  Connection.h  HttpClient.cpp  HttpClient.h  InboundPacket.h  NetworkManager.cpp  NetworkManager.h  OutboundPacket.cpp  OutboundPacket.h  Packet.cpp  Packet.h  PacketHandler.cpp  PacketHandler.h
src/net/configuration/: ConfigurationPacketHandler.cpp  ConfigurationPacketHandler.h
src/net/configuration/in/: PacketConfigurationInClientInformation.cpp  PacketConfigurationInClientInformation.h  PacketConfigurationInKeepAlive.cpp  PacketConfigurationInKeepAlive.h  PacketConfigurationInKnownPacks.cpp  PacketConfigurationInKnownPacks.h  PacketConfigurationInPluginMessage.cpp  PacketConfigurationInPluginMessage.h
src/net/handshaking/: HandshakingPacketHandler.cpp  HandshakingPacketHandler.h
src/net/handshaking/in/: PacketHandshakingInHandshake.cpp  PacketHandshakingInHandshake.h
src/net/login/: LoginPacketHandler.cpp  LoginPacketHandler.h
src/net/login/in/: PacketLoginInEncryptionResponse.cpp  PacketLoginInEncryptionResponse.h  PacketLoginInLoginAcknowledged.cpp  PacketLoginInLoginAcknowledged.h  PacketLoginInLoginPluginRequest.cpp  PacketLoginInLoginPluginRequest.h  PacketLoginInLoginPluginResponse.cpp  PacketLoginInLoginPluginResponse.h  PacketLoginInLoginStart.cpp  PacketLoginInLoginStart.h
src/net/status/: StatusPacketHandler.cpp  StatusPacketHandler.h
src/net/status/in/: PacketStatusInPingRequest.cpp  PacketStatusInPingRequest.h  PacketStatusInStatusRequest.cpp  PacketStatusInStatusRequest.h
src/player/: ClientInformation.cpp  ClientInformation.h  MojangProfile.cpp  MojangProfile.h  Player.cpp  Player.h
src/util/: Endian.h  UUIDUtil.cpp  UUIDUtil.h
